syntax = "proto3";
package queue;

option go_package = "github.com/internetarchive/Zeno/internal/queue/protobuf/v1;protobufv1";

message ProtoItem {
  bytes url = 1;
  bytes parentUrl = 2;
  string ID = 3;
  uint64 hop = 4;
  uint64 hash = 5;
  string type = 6;
  bool bypass_seencheck = 7;
  uint64 redirect = 9;
  uint64 locally_crawled = 10;
}
